# code-pratice

./: .gitignore
golang/gortfolio/: go.mod
python/fastapi-demo/: README.md
rust/simple-http-server-demo/src/: main.rs
rust/webapp-demo/: Cargo.toml  README.md
rust/webapp-demo/src/: main.rs  repository.rs
rust/webapp-demo/src/domain/: model.rs
