[package]
name = "webapp-demo"
version = "0.1.0"
authors = ["tabakazu <tkazz.bd1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
